# mota

./: .gitignore  GNN.py  PPO.py  PPO_transformer.py  README.md  animation_environment.py  database.py  environment.py  pyproject.toml  run_this.py  train.py
.claude/: settings.local.json
artifacts/data/: mota_first10.json
artifacts/expert/: route_first10.jsonl  route_first10_landmark_10k.jsonl  route_first10_landmark_10k_v2.jsonl  route_first10_landmark_10k_v3.jsonl  route_first10_landmark_10k_v4.jsonl  route_first10_landmark_200k.jsonl  route_first10_landmark_50k_v3.jsonl  route_first10_landmark_50k_v4.jsonl
artifacts/runs/: landmark_heuristic_summary.md  reward_scheme_eval.json  reward_scheme_summary.md
model/: ppo_10floor.pth
paper/: factor_reward_paper_manifest_100.csv  factor_reward_reading_report.md  paper_manifest.csv  reading_report.md
paper/reading_notes/: 000_index.md
scripts/: evaluate_reward_schemes.py  extract_mota_data.js  replay_route.py  ruffle_smoke_check.sh
src/mota_env/: __init__.py  data.py  gym_env.py  rewards.py  simulator.py
src/mota_rl/: __init__.py  behavior_clone.py  train_masked_ppo.py
src/mota_solver/: __init__.py  search.py  solve_first10.py
tests/: test_data_extract.py  test_rewards.py  test_simulator.py  test_solver.py
