[project]
name = "mota-rl"
version = "0.1.0"
description = "Deterministic Magic Tower first-10-floor solver and RL scaffolding."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
rl = [
  "gymnasium>=0.29",
  "numpy>=1.24",
  "torch>=2.1",
]
test = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

